--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 layout: default
 ---
 
+
 <div id="home">
   <h1>{{ site.title }}</h1>
+  <hr />
+
+  {% for category in site.categories %}
+  {% capture category_slug %}{{ category | first }}{% endcapture %}
+  {% for c_slug in category_slug %}
+    {% if c_slug == page.categories %}
+      <button class="btn btn-sm btn-default active">{{ c_slug }}</button>
+    {% else %}
+      <a href="/category/{{ c_slug }}" class="btn btn-sm btn-default">{{ c_slug }}</a>
+    {% endif %}
+  {% endfor %}
+  {% endfor %} 
+  
   <hr />
 
   <ol class="posts">
@@ -42,4 +56,6 @@ layout: default
       {% endif %}
     </ul>
   {% endif %}
+
+
 </div><!-- end #home -->
